refactor gallery/all